ui/apps/io.ox/core/tk/dialog.less
/**
 * This work is provided under the terms of the CREATIVE COMMONS PUBLIC
 * LICENSE. This work is protected by copyright and/or other applicable
 * law. Any use of the work other than as authorized under this license
 * or copyright law is prohibited.
 *
 * http://creativecommons.org/licenses/by-nc-sa/2.5/
 *
 * © 2011 Open-Xchange Inc., Tarrytown, NY, USA. info@open-xchange.com
 *
 * @author Christoph Kopp <christoph.kopp@open-xchange.com>
 * @author Christoph Hellweg <christoph.hellweg@open-xchange.com>
 */

.subscribe-imap-folder .modal-body {
    padding: 0;

    .io-ox-foldertree {
        height: 280px;
        padding: 0;
    }
}

.add-infostore-file {

    .modal-body {

        padding: 0;

        &>div, &>ul {
            display: inline-block;
            width: 50%;
            height: 380px;
            vertical-align: top;
            overflow: auto;
            margin: 0;
        }

        .io-ox-foldertree {
            padding: 0;
        }

        .io-ox-fileselection {

            outline: none;

            li.file {

                cursor: pointer;
                line-height: 30px;
                .user-select(none);

                label {
                    margin-top: 5px;
                    margin-left: 5px;
                    float: left;
                }

                .name {
                    .ellipsis();
                }

                &.selected, &.selected:hover {

                    background-color: @foldertree-selected-background;

                    * {
                        color: @foldertree-selected-label-color;
                    }
                }
            }

            &:focus .file {

                &.selected, &.selected:hover {

                    background-color: @foldertree-selected-focus-background;

                    * {
                        color: @foldertree-focused-label-color;
                    }

                }

            }

        }

    }

    .modal-footer {
        margin-top: 0;
    }

}


/* ios momentum scrolling, breakes mobile chrome if applied to all devices */
.ios {
    .io-ox-dialog-popup { -webkit-overflow-scrolling: touch; }
}

.mobile-dialog.io-ox-dialog-popup {
    overflow-y: scroll;
    max-height: 95%;
    width: 95%;
    margin-top: 0;
    top: 10px;
    .border-radius(0);

    .modal-footer {
        .row {
            [class*="col-"] { margin-left: 0; }
            .btn {
                width: 100%;
                margin: 2px 0;
            }
            .col-md-3 { width: inherit; }
        }
    }
    h3 { font-size: 20px; }
}

